syntax = "proto3";
package main;
option java_package = "com.emsihyo.game_gate";
option java_outer_classname = "GAME_GATE";
option java_generate_equals_and_hash = true;
option objc_class_prefix = "GAME_GATE";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

// option (gogoproto.gostring_all) = true;
// option (gogoproto.marshaler_all) = true;
// option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;

enum G2A{
  SessionDidConnect    = 0; 
  SessionDidDisconnect = 1;  
}

enum A2G{
  Kick      = 0;
  Event     = 1;
  Request   = 2;
  JoinRoom  = 3;
  LeaveRoom = 4;
}

//empty resp
message RespEmpty{

}

//gate to agent
message ReqConnect {
  string ID   = 1;//session id
  string Gate = 2;
}

//agent to gate
message RespConnect {
  int32  code = 1;
  string desc = 2;
}

message ReqDisconnect {
  string ID   = 1;//session id
  string Gate = 2;
}

message RespDisconnect {
  int32  code = 1;
  string desc = 2;
}

message ReqKick {
  string ID = 1;//session id
}

message RespKick {
  int32  code = 1;
  string desc = 2;
}

message ReqEvent {
  string ID   = 1;//session id
  bytes  data = 2;
}

message RespEvent {
  int32  code = 1;
  string desc = 2;
}

message ReqRequest {
  string ID   = 1;//session id
  bytes  data = 2;
}

message RespRequest {
  int32  code = 1;
  string desc = 2;
  bytes  data = 3;
}

message ReqJoinRoom {
  string ID   = 1;//session id
  string Room = 2;
}

message RespJoinRoom{
  int32  code = 1;
  string desc = 2;
  bytes  data = 3;
}

message ReqLeaveRoom {
  string ID   = 1;//session id
  string Room = 2;
}

message RespLeaveRoom {
  int32  code = 1;
  string desc = 2;
}


